--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,9 +1,9 @@
 # BACKGROUND
 background {
-  monitor =
+  # monitor =
 #path = screenshot
 # path = /home/ssk/Wallpaper-Bank/hiroshi_nagai.png
-    path = /home/ssk/Wallpaper-Bank/assassians-creed.png
+    path = /home/ssk/Wallpaper-Bank/batman.jpg
 #color = $background
     blur_passes = 2
     contrast = 1
