--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,20 +1,7 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "type": "chafa",
-    "width": 40,
-    "printRemaining": false,
-    "source": "./logo/batman.txt",
-    "recache": true,
-    "chafa": {
-      "symbols": "-block-border-space+vhalf"
-    },
-    "padding": {
-      "top": 0,
-      "left": 1,
-      "right": 2,
-      "bottom": 0
-    }
+    "source": "~/.config/fastfetch/logo/batman.txt"
   },
   "display": {
     "separator": " : "
@@ -101,7 +88,7 @@
     {
       "type": "localip",
       "key": "󰩟 ",
-        "format": "{1} ({4})",
+      "format": "{1} ({4})",
         // "outputColor": "36;1"
     },
     {
@@ -116,5 +103,5 @@
       "height": 4
     },
     "break"
-      ]
+  ]
 }
