--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/logo/batman.txt"
+    "source": "/home/ssk/.config/fastfetch/logos/batman.txt"
   },
   "display": {
     "separator": " : "
