--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,7 +1,10 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "/home/ssk/.config/fastfetch/logos/batman.txt"
+    "source": "/home/ssk/.config/fastfetch/logos/peek_cat.txt",
+    "color": {
+      "1": "default"
+    }
   },
   "display": {
     "separator": " : "
