--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,7 +18,7 @@ set $cursor_theme Bibata-Modern-Ice
 seat * xcursor_theme $cursor_theme 24
 
 # Your preferred terminal emulator
-set $term ghostty
+set $term kitty
 
 # Your preferred filemanager
 set $files nautilus
@@ -73,7 +73,7 @@ input type:touchpad {
 #
     # Start a terminal
     bindsym $mod+Return exec $term
-    bindsym $alt+Return exec kitty
+    bindsym $alt+Return exec ghostty
 
     # Start browser
     bindsym $mod+b exec brave
@@ -240,46 +240,35 @@ bindsym ctrl+Shift+F12 exec grimshot save area ~/Pictures/Screenshots/screenshot
 #
 # Status Bar:
 bar {
-    # position top
-    # status_command while ~/.config/sway/status.sh; do sleep 1; done 
-    # colors {
-    # 	statusline #ffffff
-    #   background #000000
-    #   inactive_workspace #000000 #000000 #ffffff
-    #   focused_workspace #ffffff #ffffff #000000
-    # }
-# ----------------------
-swaybar_command waybar
-# ----------------------
-# status_command i3status
-# position bottom
-# font pango:Jetbrains Mono 10
-# colors {
-#     background #000000
-#     statusline #ffffff
-#     separator #666666
-#     focused_workspace  #4c7899 #285577 #ffffff
-#     active_workspace   #333333 #5c5c5c #ffffff
-#     inactive_workspace #333333 #222222 #888888
-#     urgent_workspace   #2f343a #900000 #ffffff
-#     binding_mode       #2f343a #900000 #ffffff
-# }
-# separator_symbol " | "
-# strip_workspace_numbers yes
-# tray_output primary
+    position top
+    status_command while ~/.config/sway/status.sh; do sleep 1; done 
+    colors {
+    	statusline #ffffff
+      background #000000
+      inactive_workspace #000000 #000000 #ffffff
+      focused_workspace #ffffff #ffffff #000000
+      urgent_workspace #ff0000 #ff0000 #ffffff
+    }
+
+# swaybar_command waybar
 }
 
 ######################################
 # color settings fo windows         #
 ######################################
-set $color1     #24283b
-set $color2     #7aa2f7
+# set $color1     #24283b
+# set $color2     #7aa2f7
+
+set $color1     #000000
+set $color2     #ffffff
+set $color3     #24283b
+set $color4     #ff0000
 
 #app_id                          border          bground         text            indicator       child_border
 client.focused               $color2           $color2         $color1           $color2         $color2
 client.unfocused             $color2           $color1         $color2           $color1         $color1
-client.focused_inactive      $color2           $color1         $color2           $color1         $color1
-client.urgent                $color2           $color2         $color1           $color2         $color1
+client.focused_inactive      $color3           $color3         $color2           $color3         $color3
+client.urgent                $color4           $color4         $color1           $color4         $color4
 
 # Blur, rounded corner and shadow 
 # shadows enable
