feat: ✨ Divided sway config into different modules

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,288 +1,16 @@
-output eDP-1 scale 1
+include ~/.config/sway/variables
+include ~/.config/sway/colorschemes/gruvbox-material
+include ~/.config/sway/outputs
+include ~/.config/sway/inputs
+include ~/.config/sway/startup
 
-# Logo key. Use Mod1 for Alt.
-set $mod Mod4
-set $alt Mod1
+include ~/.config/sway/keybindings/basics
+include ~/.config/sway/keybindings/apps
+include ~/.config/sway/keybindings/movement
+include ~/.config/sway/keybindings/workspaces
+include ~/.config/sway/keybindings/scratchpad
+include ~/.config/sway/keybindings/resizing
 
-# Home row direction keys, like vim
-set $left h
-set $down j
-set $up k
-set $right l
-
-# fonts
-font pango:JetbrainsMono Nerd Font Bold 12
-
-# Cursor
-set $cursor_theme Bibata-Modern-Ice
-seat * xcursor_theme $cursor_theme 24
-
-# Your preferred terminal emulator
-set $term kitty
-
-# Your preferred filemanager
-set $files nautilus
-
-# Your preferred application launcher
-set $menu --no-startup-id rofi -show drun
-# set $menu --no-startup-id wofi --show drun
-
-# Lock Screen
-bindsym $mod+c exec --no-startup-id ~/.config/sway/swaylock.sh
-# bindsym $mod+c exec hyprlock 
-
-# Emojis
-bindsym $mod+comma exec smile 
-
-# Power Menu
-bindsym $mod+p exec --no-startup-id wlogout
-
-# Switch to prev/next workspace 
-# comma(,) period(.)
-bindsym $mod+slash workspace next
-bindsym $mod+period workspace prev
-
-# Gaps 
-gaps inner 2
-gaps outer 10
-
-# Borders
-default_border pixel 3
-default_floating_border pixel 1
-
-# Startup applications
-xwayland force
-exec --no-startup-id waypaper --restore
-# exec --no-startup-id hyprpaper
-# exec --no-startup-id variety
-exec --no-startup-id autotiling
-
-# Enable touchpad
-input type:touchpad {
-    tap enabled
-    natural_scroll enabled
-    dwt enabled
-    middle_emulation enabled
-    scroll_method two_finger
-}
-
-
-### Key bindings
-#
-# Basics:
-#
-    # Start a terminal
-    bindsym $mod+Return exec $term
-    bindsym $alt+Return exec ghostty
-
-    # Start browser
-    bindsym $mod+b exec brave
-    bindsym $alt+b exec firefox
-
-    # Launch file manager  
-    bindsym $alt+f exec $files
-
-    # Kill focused window
-    bindsym $mod+q kill
-
-    # Start your launcher
-    bindsym $mod+d exec $menu
-
-    # Drag floating windows by holding down $mod and left mouse button.
-    # Resize them with right mouse button + $mod.
-    # Despite the name, also works for non-floating windows.
-    # Change normal to inverse to use left mouse button for resizing and right
-    # mouse button for dragging.
-    floating_modifier $mod normal
-
-    # Reload the configuration file
-    bindsym $mod+Shift+r reload
-
-    # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
-#
-# Moving around:
-#
-    # Move your focus around
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
-
-    # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
-#
-# Workspaces:
-#
-    # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
-    # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
-#
-# Layout stuff:
-#
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
-    # bindsym $mod+b splith
-    # bindsym $mod+v splitv
-
-    # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
-
-    # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
-
-    # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
-
-    # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
-
-    # Move focus to the parent container
-    bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
-
-    # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+return move scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
-#
-# Resizing containers:
-#
-mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
-    bindsym $left resize shrink width 10px
-    bindsym $down resize grow height 10px
-    bindsym $up resize shrink height 10px
-    bindsym $right resize grow width 10px
-
-    # Ditto, with arrow keys
-    bindsym Left resize shrink width 10px
-    bindsym Down resize grow height 10px
-    bindsym Up resize shrink height 10px
-    bindsym Right resize grow width 10px
-
-    # Return to default mode
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-bindsym $mod+r mode "resize"
-#
-# Utilities:
-#
-# Audio controls
-bindsym F1 exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym F2 exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym F3 exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-
-# Brightness controls
-bindsym F4 exec brightnessctl set 5%-
-bindsym F5 exec brightnessctl set +5%
-
-# Microphone mute/unmute
-bindsym F9 exec amixer set Capture toggle
-
-# Screenshots
-bindsym F12 exec grimshot save screen ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-bindsym Shift+F12 exec grimshot save active ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-bindsym ctrl+Shift+F12 exec grimshot save area ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-
-# # Fullscreen screenshot
-# bindsym F12 exec grim ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-# # Select a region for the screenshot
-# bindsym Shift+F12 exec grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-
-#
-# Status Bar:
-bar {
-    position top
-    status_command while ~/.config/sway/status.sh; do sleep 1; done 
-    colors {
-    	statusline #ffffff
-      background #000000
-      inactive_workspace #000000 #000000 #ffffff
-      focused_workspace #ffffff #ffffff #000000
-      urgent_workspace #ff0000 #ff0000 #ffffff
-    }
-
-# swaybar_command waybar
-}
-
-######################################
-# color settings fo windows         #
-######################################
-# set $color1     #24283b
-# set $color2     #7aa2f7
-
-set $color1     #000000
-set $color2     #ffffff
-set $color3     #24283b
-set $color4     #ff0000
-
-#app_id                          border          bground         text            indicator       child_border
-client.focused               $color2           $color2         $color1           $color2         $color2
-client.unfocused             $color2           $color1         $color2           $color1         $color1
-client.focused_inactive      $color3           $color3         $color2           $color3         $color3
-client.urgent                $color4           $color4         $color1           $color4         $color4
-
-# Blur, rounded corner and shadow 
-# shadows enable
-# shadow_blur_radius 15
-# shadow_offset 8 8
-# shadow_color #000000
-#
-# default_dim_inactive 0.1
-# # for_window [app_id=".*"] opacity 1
-#
-# blur enable
-# blur_radius 3
-# blur_passes 2
-#
-# corner_radius 6
+include ~/.config/sway/bar/waybar
 
 include /etc/sway/config.d/*
