--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,188 +1,135 @@
 {
   "layer": "top",
   "position": "top",
-  // "height": 10,
-  //"spacing": 5,
-  // "margin-top": 5,
-  // "margin-left": 13,
-  // "margin-right": 13,
+  "height": 30,
 
   "modules-left": [
     "sway/workspaces",
-    "hyprland/workspaces",
-    "sway/scratchpad",
-    "disk",
-    "cpu",
-    "memory"
-    // "sway/window",
-    // "hyprland/window"
+    "sway/scratchpad"
   ],
-  "modules-center": ["clock"],
   "modules-right": [
-    "battery",
-    "pulseaudio",
-    "backlight",
+    "disk",
+    "custom/separator",
+    "cpu",
+    "custom/separator",
+    "memory",
+    "custom/separator",
     "temperature",
-    "network"
-    //"network#speed"
+    "custom/separator",
+    "network",
+    "custom/separator",
+    "pulseaudio",
+    "custom/separator",
+    "backlight",
+    "custom/separator",
+    "battery",
+    "custom/separator",
+    "clock"
   ],
-  "sway/workspaces": {
-    "all-outputs": true,
-    "warp-on-scroll": true,
-    "enable-bar-scroll": true,
-    "disable-scroll-wraparound": false,
-    "format": "{icon}",
-    // "format-icons": {
-    //   "1": "I",
-    //   "2": "II",
-    //   "3": "III",
-    //   "4": "IV",
-    //   "5": "V",
-    //   "6": "VI",
-    //   "7": "VII",
-    //   "8": "VIII",
-    //   "9": "IX",
-    //   "10": "X"
-    // },
-    // "format-icons": {
-    //   "1": "१",
-    //   "2": "२",
-    //   "3": "३",
-    //   "4": "४",
-    //   "5": "५",
-    //   "6": "६",
-    //   "7": "७",
-    //   "8": "८",
-    //   "9": "९",
-    //   // "10": "०"
-    //   "10": "१०"
-    // },
-  },
 
-  "hyprland/workspaces": {
-    "all-outputs": true,
-    "warp-on-scroll": true,
-    "enable-bar-scroll": true,
-    "disable-scroll-wraparound": false,
-    "format": " {icon} ",
-    "format-icons": {
-      //"urgent": "",
-      //"active": "",
-      //"default": ""
-    }
-  },
+"custom/separator": {
+  "format": "|"
+},
 
-  "sway/window": {
-    "format": "{app_id}",
-    "separate-outputs": true,
-    "icon":true
-  },
-
-  "hyprland/window": {
-    "format": "{app_id}",
-    "separate-outputs": true,
-    "icon":true
-  },
+"sway/workspaces": {
+  "all-outputs": true,
+  "warp-on-scroll": true,
+  "enable-bar-scroll": false,
+  "format": "{icon}",
+  "format-icons": {
+      // "1": "I",
+      // "2": "II",
+      // "3": "III",
+      // "4": "IV",
+      // "5": "V",
+      // "6": "VI",
+      // "7": "VII",
+      // "8": "VIII",
+      // "9": "IX",
+      // "10": "X"
+  }
+},
 
   "sway/scratchpad": {
-    "format": "  {count}",
+    "format": "S: {count}",
     "show-empty": false,
-    "format-icons": ["", " "],
+    "format-icons": [ "", " " ],
     "tooltip": true,
     "tooltip-format": "{app}: {title}"
   },
-  "network": {
-    // "format-wifi": "{icon} {essid}",
-    "format-wifi": "{icon} {essid}  {bandwidthDownBytes}",
-    "format-ethernet": "󰈀",
-    "format-icons": ["󰤯 ", "󰤟 ", "󰤢 ", "󰤢 ", "󰤨 "],
-    "format-disconnected": "󰪎",
-    "interval": 5,
-    "tooltip-format-wifi": " {bandwidthDownBytes} |  {bandwidthUpBytes} | {essid}",
-    "tooltip-format-disconnected": "Disconnected",
-    "on-click": "exec ~/.config/rofi/wifi/wifi.sh",
-    "on-click-right": "ghostty -e nmtui"
-  },
-  "network#speed": {
-    "interval": 1,
-    "format": "{ifname}%%",
-    "format-wifi": " {bandwidthDownBytes}",
-    "format-ethernet": " {bandwidthDownBytes}  {bandwidthUpBytes} ",
-    "format-disconnected": "󰌙",
-    "tooltip-format": "{ipaddr}",
-    "format-linked": "󰈁 {ifname} (No IP)",
-    "tooltip-format-wifi": "{essid} {icon} {signalStrength}%",
-    "tooltip-format-ethernet": "{ifname} 󰌘",
-    "tooltip-format-disconnected": "󰌙 Disconnected",
-    "max-length": 22,
-    "min-length": 20,
-    "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"]
-  },
+
   "disk": {
-    "format": "   {}%",
-    "tooltip-format": "{used}/{total}",
-    "interval": 20
+    "interval": 60,
+    "format": "/: {}%",
+    "tooltip-format": "{used}/{total}"
   },
+
   "cpu": {
     "interval": 1,
-    "format": "<span font='Font Awesome 6 Free-Solid'>\uf2db</span>  {usage}%",
-    "on-click": "ghostty btop"
+    "format": "CPU: {}%",
+    "tooltip-format": "{usage}%",
+    "on-click": "swaymsg exec gnome-system-monitor"
   },
+
+  "memory": {
+    "interval": 1,
+    "format": "MEM: {}%",
+    "tooltip-format": "{used}/{total} GiB",
+    "on-click": "swaymsg exec gnome-system-monitor"
+  },
+
   "temperature": {
-    "tooltip":false,
+    "interval": 5,
+    "tooltip": false,
     "thermal-zone": 2,
-    "hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
     "critical-threshold": 70,
-    "format": " {temperatureC}°C",
-    "format-critical": "{temperatureC}°C "
+    "format": "Temp: {temperatureC}°C",
+    "format-critical": "Temp: {temperatureC}°C (Critical!!)"
   },
+
+  "network": {
+    "format-wifi": "WiFi: {essid}",
+    "format-ethernet": "Eth: {essid}",
+    "format-disconnected": "Disconnected",
+    "interval": 5,
+    "tooltip-format-wifi": " {bandwidthDownBytes} |  {bandwidthUpBytes}",
+    "on-click": "swaymsg exec gnome-control-center network"
+  },
+
+  "pulseaudio": {
+    "format": "Vol: {volume}%",
+    "format-muted": "Vol: M",
+    "tooltip-format": "{desc}"
+  },
+
   "backlight": {
     "device": "intel_backlight",
     "scroll-step": 5,
-    "format": "{icon}{percent}",
-    "format-icons": ["󰃞 ", "󰃟 ", "󰃝 ", "󰃠 "],
-    "tooltip": true,
-    "tooltip-format": "{percent}%"
-  },
-  "memory": {
-    "interval": 1,
-    "format": "<span font='Font Awesome 5 Free'>\uf538</span>  {used}/{total} GiB",
-    // "format": "<span font='Font Awesome 5 Free'>\uf538</span>  {percentage}%",
-    "on-click": "ghostty btop",
-    "tooltip-format": "{used}/{total} GiB"
-  },
-  "pulseaudio": {
-    "format": "<span font='Font Awesome 5 Free'>{icon}</span>  {volume}",
-    "format-muted": "<span font='Font Awesome 5 Free'>\uf6a9</span>",
-    "format-icons": {
-      "headphone": "\uf025",
-      "default": ["\uf028"]
-    },
-    "tooltip-format": "{volume}% {desc}",
-    "on-click": "pamixer -t"
-  },
-  "battery": {
-    "interval": 1,
-    "states": {
-      "good": 99,
-      "warning": 30,
-      "critical": 20
-    },
-    "format-icons": ["󰂎","󰁺","󰁻","󰁽","󰁾","󰁿","󰂀","󰂁","󰂂","󰁹"],
-    "format": "{icon} {capacity}%",
-    "format-critical": "{icon} {capacity}%!!",
-    "format-warning": "{icon} {capacity}%",
-    "format-full": "{icon} {capacity}%",
-    "format-charging": "󰂅 {capacity}%",
-    "format-charging-warning": "󰢝 {capacity}%",
-    "format-charging-critical": "󰢜 {capacity}%",
-    "format-plugged": " 󰂅  {capacity}%",
-    "format-alt": " 󱧥  {time}",
+    "format": "Brt: {percent}%",
     "tooltip": false
   },
 
+  "battery": {
+    "interval": 1,
+    "states": {
+      "good": 80,
+      "warning": 30,
+      "critical": 20
+    },
+    "format": "Batt: {capacity}%",
+    "format-charging": "Batt: {capacity}% (Charging)",
+    "format-discharging": "Batt: {capacity}% (Discharging)",
+    "format-critical": "Batt: {capacity}% (Critical!!)",
+    "format-charging-warning": "Batt: {capacity}% (Charging)",
+    "format-charging-critical": "Batt: {capacity}% (Charging)",
+    "tooltip-format": "{time} remaining",
+    "tooltip-format-charging": "{time} until full",
+    "tooltip-format-discharging": "{time} remaining",
+    "on-click": "swaymsg exec gnome-control-center power"
+  },
+
   "clock": {
-    "format": "{:%I:%M %p • %a %d/%m/%y}",
+    "format": "{:%A, %B %d, %Y %I:%M %p}",
     "tooltip": true,
     "tooltip-format": "<tt>{calendar}</tt>"
   }
