--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,10 +1,7 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "/home/ssk/.config/fastfetch/logos/simpson.txt",
-    "color": {
-      "1": "default"
-    }
+    "source": "/home/ssk/.config/fastfetch/logos/boy.txt"
   },
   "display": {
     "separator": " : "
