--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,9 +2,13 @@
   "layer": "top",
   "position": "top",
   "height": 30,
+  "margin-top": 5,
+  "margin-left": 5,
+  "margin-right": 5,
 
   "modules-left": [
     "sway/workspaces",
+    "hyprland/workspaces",
     "sway/scratchpad",
     "cpu",
     "memory",
