--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,10 +49,10 @@ input {
 general {
   # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-  gaps_in = 5
+  gaps_in = 10
   gaps_out = 10
 
-  border_size = 4
+  border_size = 3
 col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
   # col.active_border = rgba(cba6f7ee) rgba(cba6f7ee) 45deg
   col.inactive_border = rgba(262626ee)
@@ -71,13 +71,13 @@ decoration {
   dim_special = 0.2
   rounding = 10
 
-  active_opacity = 0.9
-  inactive_opacity = 0.8
+  active_opacity = 1
+  inactive_opacity = 0.9
   
   blur {
     enabled = true
     size = 5
-    passes = 2
+    passes = 3
     # special = true
     # vibrancy = 0.1696
   }
@@ -125,7 +125,7 @@ allow_workspace_cycles = true
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    # force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
 
 # Example per-device config
