--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -3,7 +3,7 @@ background {
   # monitor =
 #path = screenshot
 # path = /home/ssk/Wallpaper-Bank/hiroshi_nagai.png
-    path = /home/ssk/Wallpaper-Bank/green.jpeg
+    path = /home/ssk/Wallpaper-Bank/Lock-in.jpg
 #color = $background
     blur_passes = 2
     contrast = 1
