--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,6 +1,6 @@
 # Theme
-theme = coolnight
-background-opacity = 0.75
+theme = catppuccin-mocha
+background-opacity = 1
 
 # Font
 font-family = "JetBrains Mono Nerd Font"
