added copilot chat

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,5 +25,6 @@ map ctrl+minus change_font_size all -1.0
 
 
 # Tokyo Night
-include tokyonight.conf
+# include tokyonight.conf
 # include cyberdream.conf
+include mocha.conf
